# docx-annotator

./: .pre-commit-config.yaml  AGENT.md  AGENTS.md  README.md  README_zh-CN.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
src/docxnote/: __init__.py  document.py  namespaces.py  paragraph.py  table.py
tests/: README.md  __init__.py  conftest.py  test_cell_content.py  test_comment_conflicts.py  test_comments.py  test_existing_comment_preservation.py  test_nested_tables.py  test_paragraph_text.py  test_structure_comparison.py  test_table_shape.py  test_thread_safety.py  test_xml_validity.py
